[package]
name = "mqtt_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { version = "0.12", default-features=false, features=["bundled"] }
ctrlc = "3.4.4"
env_logger = "0.11.3"
sqlite = "0.36.0"
serde = {version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"